2008-10-24  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Caret.cs:
	* Mono.TextEditor/DeleteActions.cs: fixed 'Bug 438696 - Error in text
	editor extension chain.'.

2008-10-24  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Fixed caret drawing when scrolling
	horizontally.

2008-10-21  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs: fixed 'Bug 437110 - NRE when switching to
	another file'.

2008-10-20  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Mono.TextEditor.Vi/ViMode.cs: Implement / ? n N.

2008-10-20  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Mono.TextEditor/SelectionActions.cs,
	  Mono.TextEditor/SelectionActions.cs: Implement V.

2008-10-19  Mike Krüger  <mkrueger@novell.com>

	* SyntaxModes/AspNetSyntaxMode.xml: applied patch from 'Bug 436777 -
	Missing syntax highlighting / code completion for ASP.NET master
	pages'.

2008-10-15  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Mono.TextEditor.Vi/ViMode.cs: Allow ex commands to apply to visual mode,
	add :s command.

2008-10-14  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/DeleteActions.cs: Add DeleteSelection.

	* Mono.TextEditor.Vi/ViMode.cs: Implement >{motion}, <{motion}, >>, <<
	for normal mode, and and c d > < for visual mode.

2008-10-13  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Vi/ViMode.cs: Implement A I c C x X D.

2008-10-13  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs: fixed 'Bug 434248 - Need to refresh
	texteditor after removing folded code'.

2008-10-12  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/TextEditor.cs: Don't use vi mode on default
	constructor.

	* Makefile.am:
	* Mono.TextEditor.mdp: Updated.

	* Mono.TextEditor.Vi/ViMode.cs:
	* Mono.TextEditor.Vi/ViActions.cs:
	* Mono.TextEditor.Vi/ViActionMaps.cs: Move vi code to new namespace.
	Move action lookup out of the way. Implement 'o' and 'O', and